--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -176,7 +176,7 @@ ww1_germanrework.22.t:0 "Socialism in the German Empire"
 
 #The Fleeting Right-Wing
 ww1_germanrework.23.t:0 "The Fleeting Right-Wing"
- ww1_germanrework.23.d:0 ""
+ ww1_germanrework.23.d:0 "Germany's right wing has always been favored by both the aristocracy and farmers, composed of conservative, agricultural, and nationalist parties. However, the decline of right-wing has become more and more clear as the second industrial revolution catalyzed the formation of leftist unions and bolstered support for the Social Democrats. Due to this many of the conservative parties have begun to adapt their policies to ensure they can keep their key voter's support; the conservatives continue to advocate for a self-sufficient economy less reliant on trade, especially with nations like Britain who pose a threat to German ambitions and the agriculturists call for tax exemptions for farmers to give them the support they need to feed the newly urbanized populations. If the right-wing is to revive itself it must set a clear goal that the rightist parties can follow, or else the right will be crushed under the tide of social democracy."
  ww1_germanrework.23.a:0 "Perhaps the right can still be revived.."
 
 ##1914 The Royal Approval of Frankfurt university
@@ -216,7 +216,7 @@ ww1_germanrework.41.t:0 "The Centre Block"
 
 #The Growing Pan-German Influence
 ww1_germanrework.42.t:0 "The Matter of the Pan-Germans"
- ww1_germanrework.42.d:0 ""
+ ww1_germanrework.42.d:0 "Pan-Germanism was highly influential in German politics in the 19th century during the unification of Germany when the German Empire was proclaimed as a nation-state in 1871 but without Habsburg Austria, Luxembourg, and Liechtenstein their goals were never truly achieved. After the unification, from the late 19th century, many Pan-Germanist thinkers, who since 1891 were organized in the Pan-German League, had adopted openly ethnocentric and racist ideologies, even calling for the annexation of Austria. The organization has greatly supported the educated middle and upper class; promoting German nationalist consciousness, especially among ethnic Germans outside Germany. In his three-volume work, "Deutsche Politik" (1905-07), Hasse called for German imperialist expansion in Europe which many of the League have taken to heart.\n\nHowever, since the dawn of this new millennium, the Pan-Germans have taken a moderate stance to Austria, instead focusing on annexations in Russia and France. It seems for now the Pan-Germans have abandoned the annexationist policy around Austria."
  ww1_germanrework.42.a:0 "Germany must sail a steady course"
  ww1_germanrework.42.b:0 "We must seek shelter from the left"
  ww1_germanrework.42.c:0 "They do have some points..."
