--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -1092,7 +1092,12 @@ ROM_suppressed_hungarian_language_idea_research2:0 "Promoting Romanian Language"
 
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
-ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: [old_guard_status]\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: §Rorganized§! in complete §Ropposition§! to §YCarp§!\n\nThe §mPCD§! is currently: §Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!\n\nThe §Cpeasants§! are currently: [peasant_status]"
+ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: [old_guard_status]\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: [pnl_status]\n\nThe §mPCD§! is currently: [pcd_status]\n\nThe §Cpeasants§! are currently: [peasant_status]"
+ROM_pnl_bad:0 "§Rorganized§! in complete §Ropposition§! to §YCarp§!"
+ROM_pnl_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
+ROM_pcd_less_bad:0 "§Gcriminalized§!, although §Ractively rioting§! against §YCarp§!"
+
+ROM_pcd_bad:0 "§Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!"
 ROM_peasants_bad:0 "generally apathetic, neither standing in §Gsupport§! or §Ropposition§!"
 ROM_peasants_ally:0 "§Gsupportive§! of §YCarp§!"
 ROM_peasants_become:0 "The §Cpeasants§! will become §Gsupportive§! of §YCarp§!"
@@ -1105,6 +1110,8 @@ ROM_socialists_ally:0 "§GSupporting§! §YCarp§!"
 ROM_socialist_crushed:0 "§GNot a source of concern§!"
 ROM_socialist_ally_focus:0 "The §rPDSR§! will become §Gsupportive§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
 ROM_socialist_crush_focus:0 "The §rPDSR§! will become §Gnot a source of concern§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
+ROM_ban_pnl_pcd:0 "Both the §lPNL§! and §mPCD§! will become §Gcriminalized§!, although §Ractively rioting§! against §YCarp§!\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+15%§!"
+
 ROM_old_guard_crush_focus:0 "The §qOld Guard§! will become §Gpolitically isolated§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+5%§!\nStability: §R-10.00%§!"
 ROM_strong_arm_focus:0 "Modify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
 ROM_peasant_focus:0 "Modify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
