Tweak territory annex decision

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8312,7 +8312,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_germany.125.t:0 "Territorial Reparation of [FRA.GetName]"
  ww1_germany.125.d:0 "The army of [FRA.GetNameDef] has failed on every frontline by our forces, after that [FRA.GetNameDef] government asked us the truce. There is no room for the French to keep the fights on.\n We are going to force the post war treaty on the losers, and a lot of people insist that we must include some territorial reparations in treaty terms."
  ww1_germany.125.a:0 "Take all east side of Maas."
- ww1_germany.125.b:0 "Incoporate Belgium Lëtzebuerg and unite Elsaß-Lothringen."
+ ww1_germany.125.b:0 "Incoporate Briey and Gerardmer."
+ ww1_germany.125.c:0 "Incoporate Briey only."
  ww1_germany.126.t:0 "Return of Rhineland Occupations?"
  ww1_germany.126.d:0 "[FRA.GetName] decided to return Rhineland occupations to [GER.GetNameDef]. Since we have participated in these occupation, we need to decide what should we do."
  ww1_germany.126.a:0 "Disarm would suffice."
@@ -8342,13 +8343,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_germany.132.d:0 "French troops cross the German border and advance into their territories. In violation of the Treaty of Versailles, the German government received an ultimatum from the French ambassador, which was ignored. Since the Germans are disarmed will not be able to compete with the French, which are still firmly established as a European power. \nOther countries generally view the French offensive on Germany as justified."
  ww1_germany.132.a:0 "It's end."
  ww1_germany.132.b:0 "Expected."
- ww1_germany.133.t:0 "Default"
- ww1_germany.133.d:0 "Under the Treaty of Versailles, [ROOT.GetNameDef] is obliged to pay the Entente an astronomical sum of 132 billion gold marks. Naturally, we, whose economy has been destroyed by the Great War, cannot afford to pay this amount, but they stick to that amount since France backs them and wants to trample on us. We have no choice but to default on this reparation."
- ww1_germany.133.a:0 "We need money to pay, damn it!"
- ww1_germany.134.t:0 "Occupation of the Ruhr"
- ww1_germany.134.d:0 "We are a victor of the Great War, and must be compensated for all war damage as well as the military losses of the armies of the Entente. However, Germany have recently declared a default, saying it is difficult to pay reparations due to their weak economy. This cannot be overlooked. The German administration has enough money to pay, but it is clear that it has done this to get us out of the way."
- ww1_germany.134.a:0 "Pay with your blood!"
- ww1_germany.134.b:0 "Those rats!"
+ ww1_germany.133.d:0 "We also need to adjust our territorial demands in the Nord region of France. In the Septemberprogramm, we planned to include the coastal ports of Flanders under German control, but expanding into this further would provoke a huge backlash."
+ ww1_germany.133.a:0 "Calais shall be a German base."
+ ww1_germany.133.b:0 "Germany prevails in Flanders."
+ ww1_germany.133.c:0 "We are not taking any further."
+ ww1_germany.134.t:0 "Question of Belgian Border"
+ ww1_germany.134.d:0 "There are also decisions to be made about the border alongside Wallonia and the Ardennes. It would be possible to annex the German-speaking regions, but the more we demand, the more backlash we might have to face."
+ ww1_germany.134.a:0 "Integrate Arelerland only."
+ ww1_germany.134.b:0 "Annex the Ardennes."
+ ww1_germany.134.c:0 "We don't need anything."
  ww1_germany.135.d:0 "France occupied the heavily industrialized Ruhr Valley in response to Germany defaulting on reparation payments dictated by the victorious powers after the Great War in the Treaty of Versailles. Occupation of the Ruhr worsens the economic crisis in Germany, and German civilians start to engage in acts of passive resistance and civil disobedience."
  ww1_germany.135.d2:0 "France occupied the heavily industrialized Ruhr Valley in response to Germany not following the system dictated by the victorious powers after the Great War in the Treaty of Versailles. Occupation of the Ruhr worsens the economic crisis in Germany, and German civilians start to engage in acts of passive resistance and civil disobedience."
  ww1_germany.135.b:0 "That's too much!"
