--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1938,6 +1938,7 @@
  VICTORY_POINTS_3452: "Elisavetgrad"
  VICTORY_POINTS_3376: "Yefremov"
  VICTORY_POINTS_7477: "Krasnovodsk"
+ VICTORY_POINTS_11548: "Boulogne"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
