Swedish Prince of a Finnish Throne

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -770,6 +770,7 @@
  
  FIN_royal_house:0 "Hessenin talo"
  FIN_regency:0 "State Regency"
+ FIN_SWE_neutrality_party:0 "Bernadotte"
  FIN_neutrality_party:0 "Suomen senaatti"
  FIN_democratic_party:0 "KOK"
  FIN_democratic_party_long:0 "Kansallinen Kokoomus"
