--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1166,6 +1166,7 @@
  FIN_verner_lehtimaki:0 "Verner Lehtimäki"
  FIN_august_wesley:0 "August Wesley"
  FIN_emil_nestor_setala:0 "Eemil Nestor Setälä"
+ FIN_prins_wilhelm:0 "Vilhelm"
 
  # FRANCE
  FRA_raymond_poincare:0 "Raymond Poincaré"
