--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2554,8 +2554,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  SWE_conservative_army_leadership:0 "Conservative Army Leadership"
 
  SWE_allying_socialists_tt:0 "This will cause a §Rsocialist revolution§! after completing §Y"The Radical Candidate"§! focus."
- swe_flirting_allies_tt:0 "§YIf France accepts, then upon the ratification of an alliance with the Entente we will receive claims on parts of Germany's colonial empire.§!"
- swe_flirting_germans_tt:0 "§YIf Germany accepts, then upon the ratification of an alliance with the Germans we will receive claims on Greater Finland and cores in Lapland.§!"
+ swe_finnish_throne_tt:0 "If we win §Ythe Great War§!, §YFinland§! will be come our §Ypuppet monarchy§!."
+ swe_norway_puppet_tt:0 "If we win §Ythe Great War§!, §YNorway§! will be come our §Ymonarchy§!."
  pact_with_france:0 "§BPact§! with the §RFrench§!"
  pact_with_germany:0 "§LPact§! with the §RGermans§!"
  
