--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -9621,7 +9621,7 @@
  SWE_sweden_in_the_world:0 "Sweden In the World"
  SWE_sweden_in_the_world_desc:0 "With the Pacifist loon now out of office, we can set about going out and seeing what we can do with the world."
  SWE_flirt_with_allies:0 "Flirt with the Entente"
- SWE_flirt_with_allies_desc:0 "The Entente certainly has some appetising offers for us. Most notably, the restoration of the Swedish colonial empire in Africa!"
+ SWE_flirt_with_allies_desc:0 "There is not much we can get from an alliance with Entente unless..."
  SWE_flirt_with_germans:0 "Flirt with the Kaiserreich"
  SWE_flirt_with_germans_desc:0 "The Germans have a lot to offer us. Most notably, the return of Finland to the Swedish Empire!"
  SWE_join_france:0 "Join with the French"
