saves for new states

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3431,7 +3431,7 @@
  ottoman_aydin_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_aydin_centralization|Y0%][ottoman_aydin_vilayet_centralization_value]"
  ottoman_aydin_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_aydin_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_aydin_vc_effect_3|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_aydin_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_aydin_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_aydin_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_aydin_vc_effect_3|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_aydin_vc_effect|+%]"
  ottoman_aydin_vilayet_separatist_sentiments_yes:0 "\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_aydin_vilayet_stability_factor][ottoman_aydin_vilayet_war_support_factor][ottoman_aydin_vilayet_political_power_factor]"
- ottoman_aydin_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_aydin_vilayet_stability_factor][ottoman_aydin_vilayet_war_support_factor][ottoman_aydin_vilayet_political_power_factor][ottoman_aydin_vilayet_339][ottoman_izmir_vilayet_824][ottoman_izmir_vilayet_340][ottoman_izmir_vilayet_342]"
+ ottoman_aydin_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_aydin_vilayet_stability_factor][ottoman_aydin_vilayet_war_support_factor][ottoman_aydin_vilayet_political_power_factor][ottoman_aydin_vilayet_339][ottoman_aydin_vilayet_824][ottoman_aydin_vilayet_340][ottoman_aydin_vilayet_342]"
  ottoman_aydin_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_aydin_stability_factor|=2%+]"
  ottoman_aydin_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_aydin_war_support_factor|=2%+]"
  ottoman_aydin_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_aydin_political_power_factor|=0%+]"
@@ -3604,11 +3604,13 @@
  ottoman_adana_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_adana_centralization|Y0%][ottoman_adana_vilayet_centralization_value]"
  ottoman_adana_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_adana_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_adana_vc_effect_3|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_adana_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_adana_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_adana_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_adana_vc_effect_3|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_adana_vc_effect|+%]"
  ottoman_adana_vilayet_separatist_sentiments_yes:0 "\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_adana_vilayet_stability_factor][ottoman_adana_vilayet_war_support_factor][ottoman_adana_vilayet_political_power_factor]"
- ottoman_adana_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_adana_vilayet_stability_factor][ottoman_adana_vilayet_war_support_factor][ottoman_adana_vilayet_political_power_factor][ottoman_adana_vilayet_344]"
+ ottoman_adana_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_adana_vilayet_stability_factor][ottoman_adana_vilayet_war_support_factor][ottoman_adana_vilayet_political_power_factor][ottoman_adana_vilayet_344][ottoman_adana_vilayet_857][ottoman_adana_vilayet_1057]"
  ottoman_adana_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_adana_stability_factor|=2%+]"
  ottoman_adana_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_adana_war_support_factor|=2%+]"
  ottoman_adana_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_adana_political_power_factor|=0%+]"
  ottoman_adana_vilayet_344_yes:0 "\n§Y[344.GetName]§!:[TUR_armenian_population_344][TUR_turkish_population_344]"
+ ottoman_adana_vilayet_857_yes:0 "\n§Y[857.GetName]§!:[TUR_armenian_population_857][TUR_turkish_population_857]"
+ ottoman_adana_vilayet_1057_yes:0 "\n§Y[1057.GetName]§!:[TUR_armenian_population_1057][TUR_turkish_population_1057]"
 
  TUR_baku_vilayet:0 "Baku Vilayet"
  TUR_baku_vilayet_desc:0 "[TUR_baku_vilayet_desc]"
@@ -3750,13 +3752,13 @@
  ottoman_aleppo_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_aleppo_centralization|Y0%][ottoman_aleppo_vilayet_centralization_value]"
  ottoman_aleppo_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_aleppo_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_aleppo_vc_effect_3|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_aleppo_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_aleppo_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_aleppo_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_aleppo_vc_effect_3|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_aleppo_vc_effect|+%]"
  ottoman_aleppo_vilayet_separatist_sentiments_yes:0 "\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor]"
- ottoman_aleppo_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor][ottoman_aleppo_vilayet_677][ottoman_aleppo_vilayet_859][ottoman_aleppo_vilayet_857][ottoman_aleppo_vilayet_1024][ottoman_aleppo_vilayet_829][ottoman_aleppo_vilayet_1027][ottoman_aleppo_vilayet_1029]"
+ ottoman_aleppo_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §Y[TUR_the_sublime_realm_name]§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor][ottoman_aleppo_vilayet_677][ottoman_aleppo_vilayet_859][ottoman_aleppo_vilayet_1058][ottoman_aleppo_vilayet_1024][ottoman_aleppo_vilayet_829][ottoman_aleppo_vilayet_1027][ottoman_aleppo_vilayet_1029]"
  ottoman_aleppo_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_aleppo_stability_factor|=2%+]"
  ottoman_aleppo_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_aleppo_war_support_factor|=2%+]"
  ottoman_aleppo_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_aleppo_political_power_factor|=0%+]"
  ottoman_aleppo_vilayet_677_yes:0 "\n§Y[677.GetName]§!:[TUR_arab_population_677]"
  ottoman_aleppo_vilayet_859_yes:0 "\n§Y[859.GetName]§!:[TUR_arab_population_859][TUR_turkish_population_859]"
- ottoman_aleppo_vilayet_857_yes:0 "\n§Y[857.GetName]§!:[TUR_armenian_population_857][TUR_turkish_population_857]"
+ ottoman_aleppo_vilayet_1058_yes:0 "\n§Y[1058.GetName]§!:[TUR_armenian_population_1058][TUR_turkish_population_1058]"
  ottoman_aleppo_vilayet_1024_yes:0 "\n§Y[1024.GetName]§!:[TUR_armenian_population_1024][TUR_turkish_population_1024]"
  ottoman_aleppo_vilayet_829_yes:0 "\n§Y[829.GetName]§!:[TUR_kurdish_population_829]"
  ottoman_aleppo_vilayet_1027_yes:0 "\n§Y[1027.GetName]§!:[TUR_kurdish_population_1027]"
@@ -4230,6 +4232,14 @@
  TUR_armenian_population_857_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_857_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_857_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_857_armenian_population_war_support_factor|=2%+]"
  TUR_armenian_population_857_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_857_armenian_population_war_support_factor|=0%+]"
+ TUR_armenian_population_1057_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_1057_stability_factor][TUR_armenian_population_1057_war_support_factor][TUR_armenian_population_1057_political_power_factor]"
+ TUR_armenian_population_1057_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1057_armenian_population_stability_factor|=2%+]"
+ TUR_armenian_population_1057_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1057_armenian_population_war_support_factor|=2%+]"
+ TUR_armenian_population_1057_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1057_armenian_population_war_support_factor|=0%+]"
+ TUR_armenian_population_1058_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_1058_stability_factor][TUR_armenian_population_1058_war_support_factor][TUR_armenian_population_1058_political_power_factor]"
+ TUR_armenian_population_1058_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1058_armenian_population_stability_factor|=2%+]"
+ TUR_armenian_population_1058_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1058_armenian_population_war_support_factor|=2%+]"
+ TUR_armenian_population_1058_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1058_armenian_population_war_support_factor|=0%+]"
  TUR_armenian_population_881_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_881_stability_factor][TUR_armenian_population_881_war_support_factor][TUR_armenian_population_881_political_power_factor]"
  TUR_armenian_population_881_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_881_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_881_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_881_armenian_population_war_support_factor|=2%+]"
@@ -5338,6 +5348,14 @@
  TUR_turkish_population_857_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_857_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_857_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_857_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_857_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_857_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1057_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_1057_stability_factor][TUR_turkish_population_1057_war_support_factor][TUR_turkish_population_1057_political_power_factor]"
+ TUR_turkish_population_1057_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1057_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1057_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1057_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1057_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1057_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1058_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_1058_stability_factor][TUR_turkish_population_1058_war_support_factor][TUR_turkish_population_1058_political_power_factor]"
+ TUR_turkish_population_1058_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1058_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1058_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1058_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1058_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1058_turkish_population_war_support_factor|=0%+]"
  TUR_turkish_population_859_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_859_stability_factor][TUR_turkish_population_859_war_support_factor][TUR_turkish_population_859_political_power_factor]"
  TUR_turkish_population_859_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_859_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_859_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_859_turkish_population_war_support_factor|=2%+]"
