new states finally fixed

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1954,10 +1954,10 @@
 
  TUR_ottoman_syria:0 "Ottoman Syria"
  TUR_ottoman_syria_DEF:0 "the Ottoman Provinces in Syria Under the Command of Ahmed Cemâl Paşa"
- TUR_ottoman_syria_ADJ:0 "Ottoman"
+ TUR_ottoman_syria_ADJ:0 "Ahmed Cemâl Paşa's"
  TUR_ottoman_cemal:0 "Ottoman Reclamation Government"
  TUR_ottoman_cemal_DEF:0 "the Ottoman Reclamation Government Under the Command of Ahmed Cemâl Paşa"
- TUR_ottoman_cemal_ADJ:0 "Ottoman"
+ TUR_ottoman_cemal_ADJ:0 "Ahmed Cemâl Paşa's"
 
  TUR_ottoman_selanik:0 "Ottoman Selanik"
  TUR_ottoman_selanik_DEF:0 "the Autonomous Ottoman Vilayet of Selanik"
