--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -220,7 +220,7 @@ ROM_welcome_anglo_italian_banks_desc:0 "The globe-spanning capitalist empire tha
 ROM_center_consensus:0 "The Consensus of The Center"
 ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
 ROM_reach_out_to_the_industrialists:0 "Reach Out to the Industrialists"
-ROM_reach_out_to_the_industrialists_desc:0 ""
+ROM_reach_out_to_the_industrialists_desc:0 "Romania's industry is small, weak and inefficient. We must contact industrialists, both foreign and domestic, to bridge the gap between us and our enemies."
 ROM_arfocus:0 "We will eventually be able to core §YNorthern Dobruja§! through this decision."
 ROM_romanian_army:0 "The Coming Storm"
 ROM_revanchism:0 "Revanchism"
@@ -233,9 +233,9 @@ ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
 ROM_lessons_from_balkan_wars_tt:0 "One of the following must be true:\n   Has had a war with §Y[BUL.GetFlag][BUL.GetName]§!\n   Has had a war with §Y[TUR.GetFlag][TUR.GetName]§!\n   Has had a war with §Y[SER.GetFlag][SER.GetName]§!\n   Has had a war with §Y[MNT.GetFlag][MNT.GetName]§!\n   Has had a war with §Y[GRE.GetFlag][GRE.GetName]§!"
 ROM_lessons_from_balkan_wars_desc:0 "For every victory and every defeat in the lands to our south we have learned a hard lesson about fighting wars. These lessons now drive the strategies our nation now uses. Yet no matter how deadly the wars we have just fought were, the revolver aimed at the head of Europe will eventually fire, and that war will be the deadliest of them all." 
 ROM_adapt_to_the_times:0 "Adapt to the Times"
-ROM_adapt_to_the_times_desc:0 ""
+ROM_adapt_to_the_times_desc:0 "This war is unlike any fought before. New technology, tactics and strategies have emerged, and we must adopt them in order to win."
 ROM_to_the_trenches_you_go:0 "To the Trenches you Go"
-ROM_to_the_trenches_you_go_desc:0 ""
+ROM_to_the_trenches_you_go_desc:0 "Much like other theatres of combat, the front has turned into a stalemate. We shall expand conscription to repel the foreign invaders."
 ROM_restructure_the_army:0 "Restructure the Army"
 ROM_restructure_the_army_desc:0 "The Romanian Armed Forces is one of the largest militaries in the Balkans, but is ill-equipped, untrained and inexperienced. With the help of our allies, we can finally change this."
 ROM_political_unity:0 "Political Unity"
@@ -251,7 +251,7 @@ ROM_our_call_to_arms_desc:0 ""
 ROM_claim_bessarabia:0 "A War of Liberation"
 ROM_claim_bessarabia_desc:0 "Bessarabia was a core part of the Principality of Moldavia, until it was snatched away by the Russians in 1812. While part of it was regained after the Crimean War, we were forced to cede the land in exchange for recognition of our independence by the Tsar. As an integral part of Moldavia, it is imperative the region is retaken from the Russian yoke."
 ROM_crush_pro_entente_protesters:0 "Crush Pro-Entente Protesters"
-ROM_crush_pro_entente_protesters_desc:0 ""
+ROM_crush_pro_entente_protesters_desc:0 "With pro-French sentiment common among the public, our recent decision to enter the war on the German side has been met with outrage. All protests shall be crushed, and we will declare martial law if necessary."
 ROM_abandon_the_central_powers:0 "Abandon the Central Powers"
 ROM_abandon_the_central_powers_desc:0 "While Romania has been an unofficial member of the Triple Alliance since 1883, membership has always been kept a secret from the public. Issues with Vienna over minority rights in Transylvania, and growing ties with France mean we now have little reason to renew the alliance."
 ROM_our_piece_of_the_pie:0 "Our Piece of the Pie"
@@ -310,7 +310,7 @@ ROM_anti_russianism_desc:0 "The Russians stole Bessarabia, occupied us, crushed 
 ROM_recruitment_campaigns:0 "We Need You!"
 ROM_recruitment_campaigns_desc:0 "If Romania are to win the battles our country is almost assuredly going to face, we need more men. The time has come to call upon the patriotism in every young Romanian to serve their country."
 ROM_embrace_revanchism:0 "Embrace Revanchism"
-ROM_embrace_revanchism_desc:0 ""
+ROM_embrace_revanchism_desc:0 "The idea of a Greater Romania, or România Mare, has existed for decades, it was largely unachievable until now. We vow to unify all Romanian speakers, in the name of Michael the Brave."
 ROM_recruitment_campaign:0 "Recruitment Campaign"
 ROM_german_support:0 "German Support"
 ROM_romanian_claims:0 "Romanian Claims"
@@ -319,7 +319,7 @@ ROM_secure_bulgaria:0 "Bulgarian Security"
 ROM_operation_sarbia:0 "Fall Sarbia"
 ROM_neutral:0 ""Neutrality""
 ROM_crush_the_entente_supporters:0 "Crush The Entente Supporters"
-ROM_crush_the_entente_supporters_desc:0 "War with "
+ROM_crush_the_entente_supporters_desc:0 "Upon our declaration of war on Germany with "
 ROM_war_propaganda:0 "War Propaganda"
 ROM_war_propaganda_desc:0 ""
 ROM_general_mobilization:0 "General Mobilization"
