--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -511,8 +511,8 @@
  POR_REP_neutrality:0 "Portugal"
  POR_REP_fascism:0 "Integralist Portugal"
  POR_REP_fascism_DEF:0 "Integralist Portugal"
- POR_REP_provisional:0 "Portuguese Republic"
- POR_REP_provisional_DEF:0 "the Portuguese Republic"
+ POR_REP_provisional:0 "Portuguese Provisional Republic"
+ POR_REP_provisional_DEF:0 "the Portuguese Provisional Republic"
  POR_REP_provisional_neutrality:0 "Portugal"
  POR_REP_provisional_fascism:0 "Integralist Portugal"
  POR_REP_provisional_fascism_DEF:0 "Integralist Portugal"
