--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8726,13 +8726,15 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  POR_suppress_monarchist_and_clerical_opposition:0 "Suppress Monarchist and Clerical Opposition"
  POR_suppress_monarchist_and_clerical_opposition_desc:0 ""
- POR_national_stability_act:0 "National Stability Act"
- POR_national_stability_act_desc:0 ""
+ POR_nullify_the_1910_elections:0 "Nullify the 1910 Elections"
+ POR_nullify_the_1910_elections_desc:0 ""
  POR_law_of_separation_of_church_and_state_decision:0 "Law of Separation of Church and State"
  POR_law_of_separation_of_church_and_state_decision_desc:0 ""
  POR_compose_republican_constitution_mission:0 "Writing the Republican Constitution"
  POR_compose_republican_constitution_mission_desc:0 ""
  POR_compose_republican_constitution_flag:0 "The Republican Constitution is being drafted"
+ POR_right_to_strike_and_lock_out:0 "Right to Strike and Lock-out"
+ POR_right_to_strike_and_lock_out_desc:0 ""
 
  POR_1911_election_process:0 "The Portuguese Presidential Elections of 1911"
  POR_1911_election_process_desc:0 ""
