--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9540,6 +9540,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_portugal.43.t: "The Ideal Candidate" 
  ww1_portugal.44.t: "The Constitution is Approved!"
  ww1_portugal.45.t: "Matters of Electing the President"
+ ww1_portugal.46.t: "The Popular Way"
+ ww1_portugal.47.t: "1911 Portuguese Legislative Elections"
+ ww1_portugal.48.t: "Attempts at Recognition"
+ ww1_portugal.49.t: "End of the Provisional Government"
 
  ww1_portugal_news.1.t: "Revolution in Portugal"
  ww1_portugal_news.1.d_republic: "Mirroring their former colony, Brazil, the Republicans of Portugal have couped the monarchy. A string of blunders by the Monarchy, mostly concerning the colonies and technological development, provoked a very small band of rebels to come together, which quickly earned the support of nearly the entire military.\n\nThough the issues the Monarchy faced are unlikely to be easily solved any time soon, at least the anger of the public is quenched, for now."
