--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10845,6 +10845,8 @@ POR_compose_republican_constitution_desc:0 ""
 POR_compose_republican_constitution_tt:0 "Will start a §Ychain of events§! in which the government will be able to decide on the §Ycontents§! of the new constitution."
 POR_stabilize_trade_unions:0 "Stabilize Trade Unions"
 POR_stabilize_trade_unions_desc:0 ""
+POR_primary_education_services:0 "Primary Education Services"
+POR_primary_education_services_desc:0 ""
 POR_countryside_support:0 "Pursue Countryside Support"
 POR_countryside_support_desc:0 ""
 POR_bicameralism_legislature:0 "Bicameralism Legislature"
@@ -10858,6 +10860,7 @@ POR_recognize_striking_rights:0 "Recognize Striking Rights"
 POR_recognize_striking_rights_desc:0 ""
 POR_terminate_the_provisional_republic:0 "Terminate the Provisional Republic"
 POR_terminate_the_provisional_republic_desc:0 ""
+POR_fourth_constitution_completed:0 "The Constituion has been approved"
 POR_modification_of_national_symbols:0 "Modification of National Symbols"
 POR_modification_of_national_symbols_desc:0 ""
 POR_poet_president:0 "The Poet President"
